[package]
name = "contract_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.6"
ic-cdk = "0.9.2"
ic-cdk-macros = "0.6.8"
ic-stable-structures = "0.5.4"
serde = "1.0.164"
#ic-cdk-timers = "0.3.0" # Feel free to remove this dependency if you don't need timers
